<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="tut">How to play</string>
    <string name="more">More</string>
    <string name="don">Donate</string>
    <string name="set">Settings</string>
    <string name="pref_imm">Immersive Mode</string>
    <string name="pref_themebutton">Theme Quick Switch</string>
    <string name="pref_themebutton_summ">Adds a button for quickly switching between themes</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_imm_summ">Enable Fullscreen Mode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_play">Play</string>
    <string name="default_score">0</string>
    <string name="title_activity_new_game_p">NewGameP</string>
    <string name="start_new">Start\na new Game?</string>
    <string name="discard">This will discard your\ncurrent game!</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="gameover">Game Over!</string>
    <string name="app_id">1075501366987</string>
    <string name="achievement_almost_there">CgkIy_2Bx6YfEAIQCA</string>
    <string name="achievement_winner">CgkIy_2Bx6YfEAIQBg</string>
    <string name="achievement_success">CgkIy_2Bx6YfEAIQBw</string>
    <string name="achievement_way_to_go">CgkIy_2Bx6YfEAIQAw</string>
    <string name="achievement_road_runner">CgkIy_2Bx6YfEAIQBA</string>
    <string name="leaderboard_high_scores">CgkIy_2Bx6YfEAIQAQ</string>
    <string name="leaderboard_largest_tile">CgkIy_2Bx6YfEAIQAg</string>
    <string name="title_activity_more">More</string>
    <string name="link"><a href="http://shreyas.net.in/">Shreyas Sood</a></string>
    <string name="email"><a href="mailto:shreyassood@gmail.com">Shreyas Sood</a></string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tutorial">How to play?</string>
    <string name="t1">Swipe up, down left or right to move all tiles in that direction.</string>
    <string name="t2">On touching, the same tiles add and merge to form a larger tile.</string>
    <string name="t3">Your aim is to form the 2048 tile!</string>
    <string name="t4">Sign into Google Play Games from the main screen to access Achievements and Leaderboards.</string>
    <string name="bol">Best of luck!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="score">Score</string>
    <string name="title_activity_main">MainActivity</string>
<string name="slider_title">Swipe Sensitivity</string>
<string-array name="slider_summaries">
    <!-- You can define as many summaries as you'd like -->
    <!-- The active summary will reflect the preference's current value -->
    <item>Low</item> <!-- 0.00 to 0.25 -->
    <item>Medium</item>   <!-- 0.25 to 0.50 -->
    <item>High</item>     <!-- 0.50 to 0.75 -->
    <item>Very High</item>  <!-- 0.75 to 1.00 -->
</string-array>
<item name="slider_default" format="float" type="string">0.7</item>
<string name="slider_message"></string>

</resources>
